WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311546
Fix bug and minor inefficiency in MatchedDeclarationsCache
https://bugs.webkit.org/show_bug.cgi?id=311546
Summary
Fix bug and minor inefficiency in MatchedDeclarationsCache
Chris Dumez
Reported
2026-04-05 19:29:46 PDT
Fix bug and minor inefficiency in MatchedDeclarationsCache.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-05 19:31:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62100
EWS
Comment 2
2026-04-05 23:14:03 PDT
Committed
310624@main
(9797f8d2b2ea): <
https://commits.webkit.org/310624@main
> Reviewed commits have been landed. Closing PR #62100 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-05 23:15:13 PDT
<
rdar://problem/174142153
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug