Fix bug and minor inefficiency in MatchedDeclarationsCache https://bugs.webkit.org/show_bug.cgi?id=311546

Reviewed by Darin Adler.

In applyMatchedProperties(), the isUsableAfterHighPriorityProperties check was
guarded by `cacheResult` instead of `hasUsableEntry`. When an element is not
cacheable (e.g. the document element) but find() returns a cache hit, we skip
using the cache entry but still check its high-priority properties. If that
check fails, we unnecessarily evict a valid cache entry and redundantly
re-apply all matched properties via a recursive call.

Fix by checking `hasUsableEntry` so we only validate and potentially evict
cache entries we actually used.

Also collapse removeAllMatching() from two passes over the HashMap into one.

* Source/WebCore/style/MatchedDeclarationsCache.cpp:
(WebCore::Style::MatchedDeclarationsCache::removeAllMatching):
* Source/WebCore/style/StyleResolver.cpp:
(WebCore::Style::Resolver::applyMatchedProperties):

Canonical link: https://commits.webkit.org/310624@main